close #3 Add family and member
