# app/server/routers.go
@@ -58,4 +58,70 @@ var routes = Routes{
 		"/user",
 		handler.DeleteUser,
 	},
+	{
+		"CreateFamily",
+		strings.ToUpper("Post"),
+		"/family",
+		handler.CreateFamily,
+	},
+	{
+		"ShowFamily",
+		strings.ToUpper("Get"),
+		"/family",
+		handler.ShowFamily,
+	},
+	{
+		"UpdateFamily",
+		strings.ToUpper("Put"),
+		"/family",
+		handler.UpdateFamily,
+	},
+	{
+		"DeleteFamily",
+		strings.ToUpper("Delete"),
+		"/family",
+		handler.DeleteFamily,
+	},
+	{
+		"RegisterFamilyMember",
+		strings.ToUpper("Post"),
+		"/family/member",
+		handler.RegisterFamilyMember,
+	},
+	{
+		"DeleteFamilyMember",
+		strings.ToUpper("Delete"),
+		"/family/member/{member_id}",
+		handler.DeleteFamilyMember,
+	},
+	{
+		"ListFamilyMembers",
+		strings.ToUpper("Get"),
+		"/family/members",
+		handler.ListFamilyMembers,
+	}, /*
+		{
+			"CreateTask",
+			strings.ToUpper("Post"),
+			"/task",
+			handler.CreateTask,
+		},
+		{
+			"UpdateTask",
+			strings.ToUpper("Put"),
+			"/task",
+			handler.UpdateTask,
+		},
+		{
+			"DeleteTask",
+			strings.ToUpper("Delete"),
+			"/task/{task_id}",
+			handler.DeleteTask,
+		},
+		{
+			"ListTasks",
+			strings.ToUpper("Get"),
+			"/tasks",
+			handler.ListTasks,
+		},*/
 }
